--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,5 +12,7 @@ mysql-connector-java = { group = "mysql", name = "mysql-connector-java", version
 exposed-core = { group = "org.jetbrains.exposed", name = "exposed-core", version.ref = "exposed_version" }
 exposed-jdbc = { group = "org.jetbrains.exposed", name = "exposed-jdbc", version.ref = "exposed_version" }
 
+duckdb-jdbc = { group = "org.duckdb", name = "duckdb_jdbc", version = "1.1.3" }
+
 [plugins]
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin_version" }
