--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ mysql-connector-java = { group = "mysql", name = "mysql-connector-java", version
 exposed-core = { group = "org.jetbrains.exposed", name = "exposed-core", version.ref = "exposed_version" }
 exposed-jdbc = { group = "org.jetbrains.exposed", name = "exposed-jdbc", version.ref = "exposed_version" }
 exposed-java-time = { group = "org.jetbrains.exposed", name = "exposed-java-time", version.ref = "exposed_version" }
+exposed-json = { group = "org.jetbrains.exposed", name = "exposed-json", version.ref = "exposed_version" }
 
 hikari-cp = { group = "com.zaxxer", name = "HikariCP", version = "6.2.1" }
 
