--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-# Ignore Gradle project-specific cache directory
 .gradle
-
-# Ignore Gradle build output directory
 build
-
-memo/
-
 
 .kotlin/
 .idea/
 jars/
+
+.DS_Store
